external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_invariant_deeper1.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/verification/spec_only_do_filter_invariant_deeper1.move:7:13
  │
7 │             invariant!(something);
  │             ^^^^^^^^^ Unbound function 'invariant' in current scope

error[E03009]: unbound variable
  ┌─ tests/move_2024/verification/spec_only_do_filter_invariant_deeper1.move:7:24
  │
7 │             invariant!(something);
  │                        ^^^^^^^^^ Unbound variable 'something'
